--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="_css/bootstrap.css">
     
-    <title>Conversor</title>
+    <title>Decimal Parser</title>
 </head>
 <body>
-    <h1>Conversor numérico</h1>
-    <h2>Digite um número decimal:</h2>
+    <h1>Decimal Parser</h1>
+    <h2>Please, enter a decimal number:</h2>
     
     <input type="number" name="decimal" id="dec" required>
-    <input type="button" id="btn-converter" value="Converter">
+    <input type="button" id="btn-parse" value="Parse">
 
     <h3 id="span-bin-id"></h3>
     <h3 id="span-hexa-id"></h3>
